06-kubernetes/05-despliegue-aws/deployments-services/appointment-co-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appointment-co-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appointment-co-app
  template:
    metadata:
      labels:
        app: appointment-co-app
    spec:
      containers:
        - name: appointment-co
          image: 282865065290.dkr.ecr.us-east-1.amazonaws.com/appointment_co_ms
          imagePullPolicy: Always
          ports:
            - containerPort: 3004
