06-kubernetes/05-despliegue-aws/deployments-services/appointment-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appointment-ms-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appointment-ms-app
  template:
    metadata:
      labels:
        app: appointment-ms-app
    spec:
      containers:
        - name: appointment-ms
          image: 282865065290.dkr.ecr.us-east-1.amazonaws.com/appointment_ms
          imagePullPolicy: Always
          ports:
            - containerPort: 3002
