06-kubernetes/05-despliegue-aws/deployments-services/auth-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-app
  template:
    metadata:
      labels:
        app: auth-app
    spec:
      containers:
        - name: auth-ms
          image: 282865065290.dkr.ecr.us-east-1.amazonaws.com/auth_ms
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
