06-kubernetes/05-despliegue-aws/deployments-services/gateway-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-app
  template:
    metadata:
      labels:
        app: gateway-app
    spec:
      containers:
        - name: gateway-ms
          image: 282865065290.dkr.ecr.us-east-1.amazonaws.com/gateway
          imagePullPolicy: Always
          ports:
            - containerPort: 3006
