06-kubernetes/05-despliegue-aws/deployments-services/user-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-app
  template:
    metadata:
      labels:
        app: user-app
    spec:
      containers:
        - name: user-ms
          image: 282865065290.dkr.ecr.us-east-1.amazonaws.com/user_ms
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
