06-kubernetes/05-despliegue-aws/deployments-services/appointment-co-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: appoinment-co
spec:
  type: ClusterIP
  selector:
    app: appointment-co-app
  ports:
    - port: 80
      targetPort: 3004
      protocol: TCP
