06-kubernetes/05-despliegue-aws/deployments-services/appointment-mx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: appoinment-mx
spec:
  type: ClusterIP
  selector:
    app: appointment-mx-app
  ports:
    - port: 80
      targetPort: 3005
      protocol: TCP
