06-kubernetes/05-despliegue-aws/deployments-services/appointment-pe-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: appoinment-pe
spec:
  type: ClusterIP
  selector:
    app: appointment-pe-app
  ports:
    - port: 80
      targetPort: 3003
      protocol: TCP
