06-kubernetes/05-despliegue-aws/deployments-services/appointment-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: appoinment-ms
spec:
  type: ClusterIP
  selector:
    app: appointment-ms-app
  ports:
    - port: 80
      targetPort: 3002
      protocol: TCP
