06-kubernetes/05-despliegue-aws/deployments-services/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth
spec:
  type: ClusterIP
  selector:
    app: auth-app
  ports:
    - port: 80
      targetPort: 3001
      protocol: TCP
