06-kubernetes/05-despliegue-aws/deployments-services/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
spec:
  type: ClusterIP
  selector:
    app: gateway-app
  ports:
    - port: 80
      targetPort: 3006
      protocol: TCP
