06-kubernetes/05-despliegue-aws/deployments-services/user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user
spec:
  type: ClusterIP
  selector:
    app: user-app
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
